--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "12.18.3",
+    "npm": "6.14.6"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./index.js",
-    "startdev": "nodemon ./index.js"
+    "startdev": "nodemon ./index.js",
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "author": "zabid ali",
   "license": "ISC",
