--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ NODE_PORT = 8000
 MAKE_SALT = hgcdvhcvjhdjhjdhgjkd
 NODE_ENV= "development"
 SECRET_KEY = hjgbdsfvfdsjhsfdvjfdvjvcxfjv
+CLIENT_UR= http://localhost:3000
+REACT_APP_SERVER_URL=http://localhost:8000/api   
