--- a/.env
+++ b/.env
@@ -1,8 +1,10 @@
 NEW_DATABASE_URL = "mongodb://localhost:27017/chat-room"
-DATABASE_URL= "mongodb://Zabid:zabid@cluster0-shard-00-00.d00bq.mongodb.net:27017,cluster0-shard-00-01.d00bq.mongodb.net:27017,cluster0-shard-00-02.d00bq.mongodb.net:27017/traveller?ssl=true&replicaSet=atlas-140inb-shard-0&authSource=admin&retryWrites=true&w=majority"
+DATABASE_URL= "mongodb://Zabid:zabid@cluster0-shard-00-00.mq3ig.mongodb.net:27017,cluster0-shard-00-01.mq3ig.mongodb.net:27017,cluster0-shard-00-02.mq3ig.mongodb.net:27017/chatapp?ssl=true&replicaSet=atlas-4kfqm4-shard-0&authSource=admin&retryWrites=true&w=majority"
 NODE_PORT = 8000
 MAKE_SALT = hgcdvhcvjhdjhjdhgjkd
 NODE_ENV= "development"
 SECRET_KEY = hjgbdsfvfdsjhsfdvjfdvjvcxfjv
 CLIENT_UR= http://localhost:3000
 REACT_APP_SERVER_URL=http://localhost:8000/api   
+
+
